--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.2.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "i18n": "^0.15.1",
     "i18n-react": "^0.7.0",
     "i18next": "^22.4.9",
