--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_URL=http://localhost:3001
-REACT_APP_URL_F=http://localhost:3000
+REACT_APP_URL=https://api.xatnoma.uz
+REACT_APP_URL_F=https://xatnoma.uz
 REACT_APP_CARD=6262 9100 6933 8036
